quick camera setup

--- a/ProjectWaves/Config/DefaultEngine.ini
+++ b/ProjectWaves/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ProjectWaves/Maps/2DTestMap.2DTestMap
-EditorStartupMap=/Game/ProjectWaves/Maps/2DTestMap.2DTestMap
+GameDefaultMap=/Game/ProjectWaves/Maps/BaseLevelMap.BaseLevelMap
+EditorStartupMap=/Game/ProjectWaves/Maps/BaseLevelMap.BaseLevelMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
